feat: work on 404 page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,11 @@
 {
+  "core": {
+    "not-found": {
+      "title": "404 - Not found",
+      "subtitle": "The page you requested does not exist.",
+      "back": "Return to home"
+    }
+  },
   "home": {
     "navbar": {
       "description": "Some thoughts about cryptography, web development and 3D graphics",
