fix: routing conf

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,7 +2,7 @@
   "core": {
     "not-found": {
       "title": "404 - Page non trouvée",
-      "subtitle": "La page recherchée n'existe a priori pas.",
+      "subtitle": "La page recherchée n'existe pas.",
       "back": "Retour à l'accueil"
     }
   },
