feat: change from crypto to pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,7 +51,7 @@
         "title": "Informatics and Image Engineer",
         "subtitle": "Great Engineering School Télécom Saint-Etienne",
         "duration": "2016 - 2019",
-        "description": "Courses of web, Java and C/C++ development, Agile methods, computer science. Cryptology option."
+        "description": "Courses of web, Java and C/C++ development, Agile methods, computer science. Pageslogy option."
       },
       "prepa": {
         "title": "Preparatory School (CPGE) - Maths and Physics",
